<resources>
    <string name="app_name">yukuz</string>
    <string name="email_hint">somebody@mailbox.uz</string>
    <string name="password_hint">Password*</string>
    <string name="login_button">Login</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login_account">Login to your account</string>
    <string name="login_info">To access your profile you need to login first</string>
    <string name="login_with_existing_account">login with your existing account</string>
    <string name="register"><u>register</u></string>
    <string name="not_member_text">Not a member yet?</string>
    <string name="register_page">Registration</string>
    <string name="terms_conditions">By registering to yuk.uz, you accept our terms and will receive communication from yuk.uz</string>
    <string name="first_name_hint">First name *</string>
    <string name="last_name_hint">Last name *</string>
    <string name="mobile_number_hint">   eg. +998 90 987 6543 </string>
    <string name="ssn"> eg. 423657954 </string>
    <string name="Mobile_number">Enter your mobile number for better communication </string>
    <string name="title_activity_bottom_action_bar">BottomActionBarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_delivery">Deliveries</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="enter_mail_hint">  Email Address </string>
    <string name="forgot_password_page"> Forgot your Password?</string>
    <string name="password_resent_message">    Type your email address and we will send you a code that you can use to reset your password.</string>
    <string name="resent_button_text"> SEND PASSWORD RESET LINK >> </string>
    <string name="title_activity_login">Sign in</string>


    <string name="default_req_title">Truck needed</string>
    <string name="def_time">13:48 Oct 8 2017</string>
    <string name="def_description">lorem ipsum daler google help wassasas great job master he, the driver have light car and truck car</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email or Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">yukuz</string>
    <!--post order defaults-->
    <string name="post_title">One tefal</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_recycler_view_test">RecyclerViewTest</string>
    <string name="firebase_token">f7a9e98e5bb46b51a649c493f54b4027c52f8f68</string>
    <!--facebook config-->
    <string name="facebook_app_id">308787122932281</string>
    <string name="fb_login_protocol_scheme">fb308787122932281</string>
    <string name="title_activity_address_selector">Map</string>
    <string name="upload">upload</string>
    <string name="create">create</string>
    <string name="back">back</string>
    <string name="_40a246ab">40A246AB</string>
    <string name="min_kg">min kg</string>
    <string name="max_kg">max kg</string>
    <string name="no_car">NO CAR</string>
    <string name="about_driver">About Driver</string>
    <string name="title">Title</string>
    <string name="delete">delete</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="todo">TODO image</string>
    <string name="settings">Settings</string>
    <string name="picked_requests">Picked Requests</string>
    <string name="unpicked_requests">Unpicked Requests</string>
    <string name="driver_profile">Driver Profile</string>
    <string name="driver">Driver</string>
    <string name="picked">  Picked</string>
    <string name="unpicked">  Unpicked</string>
    <string name="post">Posts</string>
    <string name="todolist">TODO</string>
    <string name="default_user_name">Mukhammadjon Tokhirov</string>
    <string name="default_user_email">tokhirov.mukhammadjon@gmail.com</string>
    <string name="default_user_phone_number">+998935741369</string>
    <string name="accept_request">ACCEPT REQUEST</string>
    <string name="decline_request">DECLINE REQUEST</string>
    <string name="order_title">My order title is just a title</string>
    <string name="description">Description</string>
    <string name="source_address">Source Address</string>
    <string name="destination_address">Destination Address</string>
    <string name="default_source_address">12, Alisher Navoiy, Fergana, Fergana, Uzbekistan</string>
    <string name="pick_order">Pick order</string>
    <string name="ignore_order">Ignore order</string>

    <string-array name="currencies">
        <item>dollar</item>
        <item>sum</item>
        <item>won</item>
    </string-array>
    <string-array name="car_types">
        <item>light car</item>
        <item>truck</item>
        <item>bicycle</item>
    </string-array>
</resources>
