<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_req_title" />

    <TextView
        style="info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="60"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/def_description" />

    <TextView
        style="@style/TextAppearance.StatusBar.EventContent.Time"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/def_time" />

</LinearLayout>