<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.utkur.yukuzapp.Authentication.Registration.RegisterActivity_1">


    <TextView
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_page" />

    <EditText
        android:id="@+id/user_email_textXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/user_first_textXML"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="@string/first_name_hint"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/user_last_textXML"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight=".5"
            android:hint="@string/last_name_hint"
            android:inputType="text"
            android:textAlignment="center" />
    </LinearLayout>

    <EditText
        android:id="@+id/user_password_textXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textAlignment="textStart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:weightSum="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_password_textXML1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textAlignment="textStart" />

        <CheckBox
            android:id="@+id/register_make_visibleXML"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:background="@color/white"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/term_conditionsXML"
        android:layout_width="190sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/terms_conditions"
        android:textAlignment="center"
        android:textColor="@color/login_with_existing"
        android:textSize="14sp" />

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:text="@string/submit" />-->
</LinearLayout>
