<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="com.example.utkur.yukuzapp.MainActivity">



   <ImageButton
       android:id="@+id/back_button"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       tools:ignore="ContentDescription"
       android:backgroundTint="@color/colorPrimaryDark"
       android:layout_marginTop="30dp"
       android:layout_marginStart="30dp"
       android:scaleType="fitCenter"
       android:src="@mipmap/back_icon_login" />

   <TextView
       android:layout_marginTop="70dp"
       android:layout_width="wrap_content"
       android:layout_height="23dp"
       android:layout_gravity="center"
       android:textAlignment="center"
       android:textColor="#4a4a4a"
       android:textSize="18sp"
       android:id="@+id/login_accountXML"
       android:text="@string/login_account"/>
   <EditText
       android:layout_gravity="center"
       android:layout_width="250dp"
       android:inputType="textEmailAddress"
       style="@style/loginEditorStyle"
       android:textAlignment="center"
       android:background="@color/loginEditorBg"
       android:hint="@string/email_hint"
       android:layout_marginTop="40dp"
       />
   <LinearLayout
       android:layout_gravity="center"
       android:layout_width="250dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:orientation="horizontal">
      <EditText
       android:layout_width="215dp"
       android:id="@+id/login_passwordXMl"
       style="@style/loginEditorStyle"
       android:hint="@string/password_hint"
       android:textAlignment="center"
       android:background="@color/loginEditorBg"
       android:inputType="textPassword"
       />
      <CheckBox
          android:layout_width="35dp"
          android:id="@+id/login_make_visibleXML"
          style="@style/loginEditorStyle"
          tools:ignore="ContentDescription"
          android:background="@color/loginEditorBg"

          />
   </LinearLayout>
   <Button
       android:layout_gravity="center"
       android:layout_margin="20dp"
       android:layout_width="250dp"
       android:textAlignment="center"
       style="@style/loginEditorStyle"
       android:id="@+id/login_buttonXML"
       android:text="@string/login_button"
       android:textSize="14sp"
       android:textColor="#ffffff"
       android:background="@color/loginButtonBg"/>
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/forgot_passwordXML"
       android:textSize="16sp"
       android:layout_gravity="center"
       android:textColor="@color/loginForgotFont"
       android:text="@string/forgot_password"/>






</LinearLayout>
