<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.utkur.yukuzapp.ForgotPasswordActivity">

    <ImageButton
        android:id="@+id/number_close_buttonXML"
        android:src="@mipmap/close_icon"
        android:backgroundTint="@color/colorPrimaryDark"
        tools:ignore="ContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/forgot_password_page"/>
<TextView
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:text="@string/password_resent_message"
    android:layout_gravity="center"
    android:layout_marginTop="30dp"
    android:textSize="19sp"
    android:textAlignment="center"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:id="@+id/user_mobile_numberXML"
        android:inputType="numberDecimal"
        android:hint="@string/enter_mail_hint"
        android:textSize="22sp"
        android:background="@color/loginEditorBg"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number_next_stepXML"
         android:text="@string/resent_button_text"
        android:layout_marginStart="111dp"
        android:textColor="@color/loginButtonBg"
        android:layout_marginTop="50dp"
        tools:ignore="ContentDescription"
        android:backgroundTint="@color/colorPrimaryDark"
        />




</LinearLayout>
