<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/progress_bar_create_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/car_type_spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_line" />

        <EditText
            android:id="@+id/car_create_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_line" />

        <EditText
            android:id="@+id/car_create_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/_40a246ab" />

        <TextView
            android:id="@+id/car_number"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/car_min_kg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:hint="@string/min_kg"
                android:inputType="number" />

            <EditText
                android:id="@+id/car_max_kg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:hint="@string/max_kg"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_line" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_car_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/back" />

            <Button
                android:id="@+id/create_car_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_green"
                android:text="@string/create" />


        </LinearLayout>
    </LinearLayout>


</FrameLayout>