<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_list_item_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="2dp"
    android:layout_marginStart="2dp"
    android:layout_marginTop="4dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical">

        <TextView
            android:id="@+id/picked_order_list_item_title_id"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_req_title" />

        <TextView
            android:id="@+id/picked_order_list_item_picked_by_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def_description" />

        <TextView
            android:id="@+id/picked_order_list_item_time_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/def_time"
            android:textAlignment="textEnd" />
    </LinearLayout>
</android.support.v7.widget.CardView>