<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TableRow
        android:id="@+id/firstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dip"
            android:text="@string/title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_view_order_title"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:padding="18dip"
            android:text="match_parent" />

    </TableRow>

    <TableRow
        android:id="@+id/secondRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dip"
            android:text="@string/description"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_view_order_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:lines="4"
            android:maxEms="4"
            android:maxLines="4"
            android:padding="18dip"
            android:singleLine="false"
            android:text="@string/def_description" />

    </TableRow>

    <TableRow
        android:id="@+id/thirdRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dip"
            android:text="Offer / Weight"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_view_order_offer_wight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dip"
            android:text="6500 won / 250kg" />

    </TableRow>

    <TableRow
        android:id="@+id/forthRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dip"
            android:text="@string/source_address"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_view_order_source_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:lines="3"
            android:maxEms="4"
            android:maxLines="4"
            android:padding="18dip"
            android:singleLine="false"
            android:text="@string/default_source_address" />

    </TableRow>

    <TableRow
        android:id="@+id/fifthRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dip"
            android:text="@string/destination_address"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_view_order_destination_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:lines="3"
            android:maxEms="4"
            android:maxLines="4"
            android:padding="18dip"
            android:singleLine="false"
            android:text="@string/default_source_address" />

    </TableRow>

    <TableRow
        android:id="@+id/sixthRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dip"
            android:text="Vehicle Type"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_view_order_requested_car_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dip"
            android:text="Truck" />

    </TableRow>
</TableLayout>
