<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/drivers_list_item_user_image"
            android:layout_width="@dimen/profile_height"
            android:layout_height="@dimen/profile_width"
            android:layout_margin="4dp"
            android:src="@drawable/yuk_uz"
            app:civ_border="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/drivers_list_item_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_user_name"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/drivers_list_item_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_user_email" />

                <TextView
                    android:id="@+id/drivers_list_item_user_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_user_phone_number" />

                <TextView
                    android:id="@+id/drivers_list_item_user_ssn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ssn: 4521665476" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>